change service banks markdowns

--- a/master/استعلامی بانکی.md
+++ b/master/استعلامی بانکی.md
@@ -13,9 +13,11 @@
 
 با استفاده از سرویس های بانکی می توانید عملیاتی مانند، دریافت موجود، کارت به کارت، انتقال وجه داخلی ، پایا گروهی و ... را به راحتی انجام دهید.
 
-**نکته :** برای استفاده از این سرویس ها نیاز است، ابتدا با استفاده از این ابزار https://accounts.pod.ir/secTools.html برای خود یک کلید عمومی (Public Key) و کلید خصوصی (Private Key) با الگوریتم RSA-SHA1 ایجاد کنید.
-کلید خصوصی را نزد خود نگه داشته و کلید عمومی را با مراجعه حضوری به یکی از شعب بانک پاسارگاد جهت دریافت نام کاربری (username) وب سرویس و تعیین سقف مالی هر سرویس اعلام نمایید.
+**نکته :** برای استفاده از این سرویس ها نیاز است، ابتدا با استفاده از این ابزار https://accounts.pod.ir/secTools.html برای خود یک کلید عمومی (Public Key) و کلید خصوصی (Private Key) با الگوریتم RSA-SHA1 ایجاد کنید. کلید خصوصی را نزد خود نگه داشته و کلید عمومی را با مراجعه حضوری به یکی از شعب بانک پاسارگاد جهت دریافت نام کاربری (username) وب سرویس و تعیین سقف مالی هر سرویس اعلام نمایید. برای استفاده از سرویس‌های بانکی نیاز به احراز هویت توسط شعبه بانک پاسارگاد است؛ برای این منظو ابتدا یکی از فرم‌های زیررا دانلود نموده و جهت تکمیل و احراز هویت به یکی از شعب بانک پاسارگاد مراجعه نمایید. 
 
+[دانلود فرم درخواست برای شخص حقیقی](https://github.com/podiumir/docs/tree/master/master/forms/request-bank-service-legal.pdf)
+
+[دانلود فرم درخواست برای شخص حقوقی](https://github.com/podiumir/docs/tree/master/master/forms/request-bank-service-actual.pdf)
 
 <div class="box-end">
 </div>
@@ -24,6 +26,48 @@
 ## دریافت اطلاعات شبا
 
 با استفاده از این سرویس می توانید با پاس دادن شماره شبا **نام و نام خانوادگی** صاحب حساب را بدست آورید
+
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    sheba     |            string              |            شماره شبا	           |                       |    *    |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |        |
+|     token    |                  string        |             توکن          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد            |        |
+
+**خروجی:**
+
+آرایه
+
+
+**نمونه خروجی:**
+
+``` javascript
+[
+  "hasError": false,
+  "messageId": 0,
+  "referenceNumber": "63625049",
+  "errorCode": 0,
+  "count": 0,
+  "ott": "329e01cf16ec7720",
+  "result": [
+    "sheba": "sheba number",
+    "owners": [
+      [
+        "firstName": "نام تست",
+        "lastName": "نام خ تست"
+      ],
+      [
+        "firstName": "نام تست 2",
+        "lastName": "نام خانوادگی 2"
+      ]
+    ]
+  ]
+]
+```
+
+**سرویس‌ها:**
 
 <div class="tab-start">
 </div>
@@ -159,6 +203,179 @@ podBanking.getShebaInfo(getShebaInfoData)
 با استفاده از این سرویس می توانید نام و نام خانوادگی صاحب حساب و وضعیت حساب را بدست آورید.
 
 
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    Sheba     |    string  |   شماره شبا	   |      |   *     |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**نمونه خروجی:**
+
+```javascript
+[
+  "hasError" => false,
+  "messageId" => 0,
+  "referenceNumber" => "799287750",
+  "errorCode" => 0,
+  "count" => 0,
+  "ott" => "2ec39f3bf5ae6991",
+  "result" => [
+    "result" => [
+      "IsSuccess" => true,
+      "Message" => "استعلام شماره شبا با موفقیت انجام شد.",
+      "Data" => [
+        "Sheba" => "IR00000000000000000000000",
+        "AccountOwners" => [
+          [
+            "FirstName" => "نام",
+            "LastName" => "نام خانوادگی"
+          ]
+        ],
+        "AccountStatus" => "02",
+        "AccountStatusName" => "حساب فعال است."
+      ],
+      "MessageCode" => 16000
+    ],
+    "header" => [
+      "Transfer-Encoding" => "chunked",
+      "Keep-Alive" => "timeout=65",
+      "AR-PoweredBy" => "Arvan Cloud (arvancloud.com)",
+      "AR-ATIME" => "0.617",
+      "Server" => "ArvanCloud",
+      "X-Content-Type-Options" => "nosniff",
+      "Connection" => "keep-alive",
+      "Date" => "Wed, 18 Dec 2019 08 =>47 =>52 GMT",
+      "X-Frame-Options" => "SAMEORIGIN",
+      "ar-sid" => "2081",
+      "Strict-Transport-Security" => "max-age=31536000; includeSubDomains",
+      "AR-Request-ID" => "eff715c0249d7daa6fb4f636b2a64211",
+      "Cache-Control" => "private, max-age=0",
+      "Vary" => "Accept-Encoding",
+      "Content-Type" => "text/xml; charset=utf-8"
+    ],
+    "statusCode" => 200
+  ]
+]
+```
+‍‍‍
+
+**سرویس‌ها:**
+
+<div class="tab-start">
+</div>
+
+# [Java](#tab/java)
+
+``` java
+ private static void getShebaAndStatus() {
+        BaseInfoVo baseInfoVo = new BaseInfoVo.Builder()
+                .setToken(TOKEN)
+                .setToken_issuer(1)
+                .setServerType(Enum_Server_type.PRODUCTION)
+                .setScApiKey(API_KEY)
+//                .setScVoucherHash(scVoucherHashs)
+                .build();
+
+        PodBanking podBanking = new PodBanking();
+        SignatureInfo signatureInfo = new SignatureInfo();
+        signatureInfo.setPrivateKey();
+        try {
+            GetShebaAndStatusVo getShebaAndStatusVo = new GetShebaAndStatusVo.Builder(baseInfoVo)
+                    .setUserName({})
+                   .setSheba({})
+                    .setShenaseVariz({})
+                    .setSignatureInfo(signatureInfo)
+                    .build();
+            podBanking.getShebaAndStatus(getShebaAndStatusVo, new OnGetResponseListener<GetShebaAndStatusSrv>() {
+                @Override
+                public void onResponse(ResultVo<GetShebaAndStatusSrv> result) {
+
+                    try {
+                        System.out.println(result.getResult().getResult().getData().getAccountOwners().get(0).getFirstName());
+                    } catch (PodException e) {
+                        System.out.println("code : " + e.getCode() + "\nmessage : " + e.getMessage());
+                    }
+                }
+                @Override
+                public void onFailed(PodException e) {
+                    System.out.println("code : " + e.getCode() + "\nmessage : " + e.getMessage());
+                }
+            });
+        } catch (PodException e) {
+            System.out.println("code : " + e.getCode() + "\nmessage : " + e.getMessage());
+        }
+    }
+
+```
+# [PHP](#tab/php)
+
+``` php
+$param =
+        [
+            ## ============== Required Parameters  ====================
+            'UserName' =>  '{Put User Name}',
+            'Sheba' => 'IR080570100611513898506001',
+            'scApiKey' => '{Put Service Call Api Key}',
+            ## ============== Optional Parameters  ====================
+            'privateKey' => $privateKey,
+            'scVoucherHash' => ['{Put Service Call Voucher Hashes}'],
+        ];
+    try {
+        $result = $BankingService->getShebaInfoAndStatus($param);
+        print_r($result);
+    } catch (ValidationException $e) {
+        print_r($e->getResult());
+        print_r($e->getErrorsAsArray());
+    } catch (PodException $e) {
+        print_r($e->getResult());
+    }
+
+```
+
+# [Nodejs](#tab/nodejs)
+
+``` javascript
+let getShebaInfoAndStatusData = {
+      // ------ REQUIRED ------
+      UserName: 'USERNAME',
+      Sheba: 'SHEBA',
+      scApiKey: 'API KEY',
+
+      // ------ REQUIRED (ONLY ONE OF THESE) ------
+      privateKey: 'PRIVATE KEY'
+      // privateKeyAddress:  '.PEM FILE ADDRESS'
+
+      // ------ OPTIONAL ------
+      // ShenaseVariz: 'SHENASE VARIZ''
+      // scVoucherHash: ['HASH#1', 'HASH#2']
+
+      // ------ OPTIONAL (JUST CHANGE THE CURRENT REQUEST) ------
+      // token: 'TOKEN'
+      // tokenIssuer: 0 | 1
+    };
+    podBanking.getShebaInfoAndStatus(getShebaInfoAndStatusData)
+      .then(function (result) {
+        console.log(JSON.stringify(result, null, 2));
+      })
+      .catch(function (error) {
+        console.log(JSON.stringify(error, null, 2));
+      });
+
+```
+
+<div class="tab-end">
+</div>
+
+
 <div class="box-end">
 </div>
 
@@ -167,6 +384,35 @@ podBanking.getShebaInfo(getShebaInfoData)
 
 با استفاده از این سرویس می توانید با پاس دادن شماره کارت **اطلاعات صاحب کارت** را بدست آورید
 
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    cardNumber     |    string  |   شماره کارت   |   رشته ای به صورت اعداد پشت سر هم   |    *    |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |        |
+|     token    |                  string        |             توکن          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد            |        |
+
+**خروجی:**
+
+آرایه
+
+**نمونه خروجی:**
+
+``` javascript
+[
+  "hasError": false,
+  "messageId": 0,
+  "referenceNumber": "63625092",
+  "errorCode": 0,
+  "count": 0,
+  "ott": "473ca5e4f66a3b8c",
+  "result": "نام تست"
+]
+```
+
+
+**سرویس‌ها:**
 
 <div class="tab-start">
 </div>
@@ -265,9 +511,71 @@ podBanking.getDebitCardInfo(getDebitCardInfoData)
 
 ## بازیابی اطلاعات سپرده از کارت
 
-با استفاده از این سرویس می توانید با پاس دادن شماره کارت شماره سپرده متصل به کارت را بدست آورید
+با استفاده از این سرویس می توانید با پاس دادن شماره کارت شماره سپرده متصل به کارت را بدست آورید.
 
 
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    cardNumber     |    string  |   شماره کارت   |      |    *    |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**نمونه خروجی:**
+
+
+``` javascript
+ Array
+(
+    [hasError] => 
+    [messageId] => 0
+    [referenceNumber] => 799468985
+    [errorCode] => 0
+    [count] => 0
+    [ott] => 76f3b55f811c98cd
+    [result] => Array
+        (
+            [result] => Array
+                (
+                    [IsSuccess] => 1
+                    [Message] => .شماره شبا با موفقیت دریافت شد
+                    [Data] => IR980570100680013557234101
+                    [MessageCode] => 5001
+                )
+            [header] => Array
+                (
+                    [Transfer-Encoding] => chunked
+                    [Keep-Alive] => timeout=65
+                    [AR-PoweredBy] => Arvan Cloud (arvancloud.com)
+                    [AR-ATIME] => 0.371
+                    [Server] => ArvanCloud
+                    [X-Content-Type-Options] => nosniff
+                    [Connection] => keep-alive
+                    [Date] => Wed, 18 Dec 2019 11:38:13 GMT
+                    [X-Frame-Options] => SAMEORIGIN
+                    [ar-sid] => 2081
+                    [Strict-Transport-Security] => max-age=31536000; includeSubDomains
+                    [AR-Request-ID] => fa942fc5d29bb65fcd2b9e7770704f97
+                    [Cache-Control] => private, max-age=0
+                    [Vary] => Accept-Encoding
+                    [Content-Type] => text/xml; charset=utf-8
+                )
+            [statusCode] => 200
+        )
+)
+    
+```
+
+
+**سرویس‌ها:**
 
 <div class="tab-start">
 </div>
@@ -406,6 +714,58 @@ let getDepositNumberByCardNumberData = {
 <div class="tab-end">
 </div>
 
+<br/>
+در این مثال قصد داریم سرویس [ دریافت اطلاعات سپرده از شماره کارت ] بانک پاسارگاد را  اجرا نماییم.
+ 
+با فراخواندن این API و با ورود شماره کارت می توان شماره سپرده دارنده حساب را بازیابی نمود. این ویژگی در رابطه با حساب‌های بانک پاسارگاد قابل اجرا می‌باشد.
+ 
+فیلدهای ورودی این سرویس  به شرح زیر میباشد :
+ 
+**UserName:** نام کاربری  
+
+**CardNumber :** شماره 16 رقمی کارت بدون خط تیره و پشت سر هم 
+
+yyyy/MM/dd HH:mm:ss:fff **:Timestamp**   تاریخ ثبت درخواست میلادی
+
+**Signature :** امضای دیجیتال
+ 
+پارامتر **Signature** امضای دیجیتال مقادیر فیلدهای فوق با استفاده از الگوریتم **SHA1** به این صورت که در هر درخواست، تمامی اطلاعات ورودی متد، باید توسط کلید خصوصی کاربر و با الگوریتم **SHA1** امضا شوند و امضای تولید شده به همراه اطلاعات ورودی به مقدار **paramValues** در **Signature** ارسال شود.
+ 
+**تــوجــه :** این مثال جنبه نمایشی دارد و اطلاعات واقعی در آن ارسال نمیشود بنابراین اجرا و دریافت پاسخ صحیح از سرویس مذکور نیازمند ارسال اطلاعات حقیقی و احراز شده توسط بانک میباشد در غیر این صورت پیغام خطای مربوطه را دریافت خواهید کرد.
+ 
+
+جهت ایجاد امضای دیجیتال رشته جیسان ارسال شده در پارامتر  **Signature** حتما میبایست در یک خط و بدون فاصله مابین مقادیر وکلید و بدون اعمال هرگونه **Indent** باشد. مانند نمونه کد زیر
+
+``` javascript
+{"UserName":"","CardNumber":"","Timestamp":""}
+```
+
+فراخوانی سرویس " دریافت اطلاعات سپرده از شماره کارت "  توسط سرویس فراخوانی سرویس پاد
+
+``` javascript
+HEADER:
+        _token_=[ api_token ]
+        _token_issuer_= 1
+Method: POST
+Url:
+        [platform-address]/nzh/serviceCall/
+Parameters:
+       productId = 2606  * 
+       paramNames= UserName *
+       paramValues= [ your UserName] *
+       paramNames= CardNumber*
+       paramValues= [ your CardNumber] *
+       paramNames= Timestamp *
+       paramValues= [ your Timestamp ] *
+       paramNames= signature *
+       paramValues= [ your signature] *
+
+```
+نمونه کد خروجی سرویس فوق به شرح زیر میباشد.
+
+``` javascript
+{"IsSuccess":"true","Message":"پیغام","MessageCode":"کدعملیات","Data":"شماره سپرده "}
+```
 
 <div class="box-end">
 </div>
@@ -414,6 +774,60 @@ let getDepositNumberByCardNumberData = {
 
 با استفاده از این سرویس می توانید با پاس دادن شماره کارت **شماره شبا** متصل به کارت را بدست آورید
 
+
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    cardNumber     |    string  |   شماره کارت   |      |    *    |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**نمونه خروجی:**
+
+``` javascript
+[
+  "hasError" => false,
+  "messageId" => 0,
+  "referenceNumber" => "799118541",
+  "errorCode" => 0,
+  "count" => 0,
+  "ott" => "f340acd28203ebd4",
+  "result" => [
+    "result" => [
+      "IsSuccess" => true,
+      "Message" => ".شماره شبا با موفقیت دریافت شد",
+      "Data" => "IR0000000000000000000000",
+      "MessageCode" => 5001
+    ],
+    "header" => [
+      "Transfer-Encoding" => "chunked",
+      "Keep-Alive" => "timeout=65",
+      "AR-PoweredBy" => "Arvan Cloud (arvancloud.com)",
+      "AR-ATIME" => "0.298",
+      "Server" => "ArvanCloud",
+      "X-Content-Type-Options" => "nosniff",
+      "Connection" => "keep-alive",
+      "Date" => "Wed, 18 Dec 2019 06 =>18 =>24 GMT",
+      "X-Frame-Options" => "SAMEORIGIN",
+      "ar-sid" => "2081",
+      "Strict-Transport-Security" => "max-age=31536000; includeSubDomains",
+      "AR-Request-ID" => "d579d7fe662fcc78e3a4e9831a5e88aa",
+      "Cache-Control" => "private, max-age=0",
+      "Vary" => "Accept-Encoding",
+      "Content-Type" => "text/xml; charset=utf-8"
+    ],
+    "statusCode" => 200
+  ]
+]
+```
 
 
 <div class="tab-start">
@@ -560,6 +974,25 @@ catch (ValidationException $e) {
 
 با استفاده از این سرویس می توانید شماره شبا متصل به سپرده را بدست آورید.
 
+
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    DepositNumber     |    string  |   	شماره سپرده	   |      |    *    |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+
+**سرویس‌ها:**
+
 <div class="tab-start">
 </div>
 
@@ -704,6 +1137,63 @@ let convertDepositNumberToShebaData = {
 ## تبدیل شماره شبا به سپرده
 
 با استفاده از این سرویس می توانید شماره سپرده متصل به شبا را بدست آورید.
+
+
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    Sheba     |    string  |   	شماره شبا	   |      |        |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**نمونه خروجی:**
+
+```javascript
+[
+  "hasError" => false,
+  "messageId" => 0,
+  "referenceNumber" => "799272894",
+  "errorCode" => 0,
+  "count" => 0,
+  "ott" => "b9fd17d4f051e6ae",
+  "result" => [
+    "result" => [
+      "IsSuccess" => true,
+      "Message" => "تبدیل شماره شبا به سپرده با موفقیت انجام شد",
+      "Data" => "0000.000.0000000.0",
+      "MessageCode" => 0
+    ],
+    "header" => [
+      "Transfer-Encoding" => "chunked",
+      "Keep-Alive" => "timeout=65",
+      "AR-PoweredBy" => "Arvan Cloud (arvancloud.com)",
+      "AR-ATIME" => "0.297",
+      "Server" => "ArvanCloud",
+      "X-Content-Type-Options" => "nosniff",
+      "Connection" => "keep-alive",
+      "Date" => "Wed, 18 Dec 2019 08 =>36 =>07 GMT",
+      "X-Frame-Options" => "SAMEORIGIN",
+      "ar-sid" => "2011",
+      "Strict-Transport-Security" => "max-age=31536000; includeSubDomains",
+      "AR-Request-ID" => "c469adb41e191d4d9eddb3eec72d2d64",
+      "Cache-Control" => "private, max-age=0",
+      "Vary" => "Accept-Encoding",
+      "Content-Type" => "text/xml; charset=utf-8"
+    ],
+    "statusCode" => 200
+  ]
+]
+```
+
+**سرویس‌ها:**
 
 
 <div class="tab-start">
