--- a/master/سپرده بانکی.md
+++ b/master/سپرده بانکی.md
@@ -23,6 +23,96 @@
 با استفاده از این سرویس می توانید عملیات پایا تکی و یا گروهی را انجام دهید
 
 
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    SourceDepositNumber     |    string  |   	شماره سپرده جهت برداشت	   |      |     *   |
+|    TransferMoneyBillNumber     |    string  |   	   |    در صورتیکه سپرده مبدا دارای شناسه قبض است باید این فیلد ارسال شود.  |       |
+|    FileUniqueIdentifier     |    string  |   	   |   شناسه یکتای فایل که حتما باید با ACH شروع شود و از کاراکترهای حرفی و عددی تشکیل شده است.   |     *   |
+|    BatchPayaItemInfos.Amount	     |    string  |   		مبلغ تراکنش	   |   	  |     *   |
+|    BatchPayaItemInfos.BeneficiaryFullName	     |    string  |   		نام و نام خانوادگی ذینفع	   |   	کاراکترهای فارسی ارسال شود   |     *   |
+|    BatchPayaItemInfos.Description	     |    string  |   		توضیحات	   |   	کاراکترهای فارسی ارسال شود   |     *   |
+|    BatchPayaItemInfos.DestShebaNumber	     |    string  |   			شماره شبای مقصد	   |      |     *   |
+|    BatchPayaItemInfos.BillNumber     |    string  |   		شناسه واریز	   |      |     *   |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**نمونه خروجی:**
+
+```javascript
+[
+  "hasError" =>  false,
+  "messageId" =>  0,
+  "referenceNumber" =>  "799331802",
+  "errorCode" =>  0,
+  "count" =>  0,
+  "ott" =>  "bbd26c9fa4ecd458",
+  "result" =>  [
+    "result" =>  [
+      "IsSuccess" =>  true,
+      "Message" =>  "عملیات پایای گروهی با موفقیت ثبت شد.",
+      "Data" =>  [
+        [
+          "ReferenceNumber" =>  "9809270572440000",
+          "DestinationBankName" =>  "پاسارگاد",
+          "State" =>  "ثبت و واریز شده",
+          "BatchNumber" =>  935246539000,
+          "BatchTransferId" =>  249000,
+          "Amount" =>  10000,
+          "BeneficiaryFullName" =>  "نام و نام خانوادگي",
+          "Description" =>  "توضيحات",
+          "DestShebaNumber" =>  "IR000000000000000000000",
+          "BillNumber" =>  "548000",
+          "InquiryName" =>  null
+        ],
+        [
+          "ReferenceNumber" =>  "9809270572440000",
+          "DestinationBankName" =>  "پاسارگاد",
+          "State" =>  "ثبت و واریز شده",
+          "BatchNumber" =>  935246500000,
+          "BatchTransferId" =>  249000,
+          "Amount" =>  10000,
+          "BeneficiaryFullName" =>  "نام و نام خانوادگي",
+          "Description" =>  "توضيحات",
+          "DestShebaNumber" =>  "IR000000000000000000000000",
+          "BillNumber" =>  "548571",
+          "InquiryName" =>  null
+        ]
+      ],
+      "MessageCode" =>  0
+    ],
+    "header" =>  [
+      "Transfer-Encoding" =>  "chunked",
+      "Keep-Alive" =>  "timeout=65",
+      "AR-PoweredBy" =>  "Arvan Cloud (arvancloud.com)",
+      "AR-ATIME" =>  "3.992",
+      "Server" =>  "ArvanCloud",
+      "X-Content-Type-Options" =>  "nosniff",
+      "Connection" =>  "keep-alive",
+      "Date" =>  "Wed, 18 Dec 2019 09 => 25 => 49 GMT",
+      "X-Frame-Options" =>  "SAMEORIGIN",
+      "ar-sid" =>  "2081",
+      "Strict-Transport-Security" =>  "max-age=31536000; includeSubDomains",
+      "AR-Request-ID" =>  "7aa4e96ef8ff1ad37df88b8404a08bf1",
+      "Cache-Control" =>  "private, max-age=0",
+      "Vary" =>  "Accept-Encoding",
+      "Content-Type" =>  "text/xml; charset=utf-8"
+    ],
+    "statusCode" =>  200
+  ]
+]
+```
+
+**سرویس‌ها:**
+
 <div class="tab-start">
 </div>
 
@@ -217,6 +307,103 @@ let payaServiceData = {
 با استفاده از این سرویس می توانید گزارشی از تراکنش های سپرده خود را دریافت کنید.
 
 
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    StartDate     |    Date  |   		تاریخ شروع	   |      |     *   |
+|    EndDate     |    Date  |   		تاریخ پایان	   |      |     *   |
+|    DepositNumber     |    string  |   			شماره سپرده	   |   یکی از موارد شماره سپرده یا شبا اجباری است   |       |
+|    Sheba     |    string  |   		شماره شبا	   |   یکی از موارد شماره سپرده یا شبا اجباری است   |        |
+|    Count     |    integer  |   		تعداد	   |      |        |
+|    FirstIndex     |    integer  |   		شماره اولین خروجی	   |      |        |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+
+**نمونه خروجی:**
+
+```javascript
+[
+  "hasError" =>  false,
+  "messageId" =>  0,
+  "referenceNumber" =>  "799451558",
+  "errorCode" =>  0,
+  "count" =>  0,
+  "ott" =>  "b723e3ccc077aed2",
+  "result" =>  [
+    "result" =>  [
+      "IsSuccess" =>  true,
+      "Message" =>  "عملیات مورد نظر با موفقیت انجام شد.",
+      "Data" =>  [
+        [
+          "TransactionDate" =>  "1398/09/27 - 14 => 04 => 08.7788430",
+          "DeptorAmount" =>  10,
+          "CreditorAmount" =>  0,
+          "Description" =>  "انتقال وجه به سپرده 0000.0000.00000002.0  - به نام - تست_سامانه وب سرویس",
+          "DocNumber" =>  "1-98-1001-IRR-00000000",
+          "ChqNumber" =>  "",
+          "Amount" =>  8465710,
+          "PaymentId" =>  "100",
+          "BranchCode" =>  "1",
+          "BranchName" =>  "ستاد",
+          "TransactionCode" =>  "10.110.0.76 => 3002$70157_1576000000452_99990015_255.255.255.255_997",
+          "TransactionSideLastName" =>  "",
+          "TransactionSideFirstName" =>  "",
+          "TransactionSideDestDepositNum" =>  "",
+          "TransactionSideSrcDepositNum" =>  ""
+        },
+        [
+          "TransactionDate" =>  "1398/09/27 - 12 => 55 => 39.2082690",
+          "DeptorAmount" =>  20000,
+          "CreditorAmount" =>  0,
+          "Description" =>  "ثبت گروهی پایا  با شناسه فایل ACH15ASII8d5WP5U6800 و شماره پیگیری های 9809200000040918, 9809270000000919- انتقالی_ثبت گروهي پايا در شعبه بانکداري مدرن - وب سرويس",
+          "DocNumber" =>  "1-98-1001-IRR-615990000",
+          "ChqNumber" =>  "",
+          "Amount" =>  8465720,
+          "PaymentId" =>  "1",
+          "BranchCode" =>  "1",
+          "BranchName" =>  "ستاد",
+          "TransactionCode" =>  "10.110.0.76 => 3002$63634_1576000000068_99990015_255.255.255.255_997",
+          "TransactionSideLastName" =>  "",
+          "TransactionSideFirstName" =>  "",
+          "TransactionSideDestDepositNum" =>  "",
+          "TransactionSideSrcDepositNum" =>  ""
+        }
+      ],
+      "MessageCode" =>  0
+    },
+    "header" =>  [
+      "Transfer-Encoding" =>  "chunked",
+      "Keep-Alive" =>  "timeout=65",
+      "AR-PoweredBy" =>  "Arvan Cloud (arvancloud.com)",
+      "AR-ATIME" =>  "1.047",
+      "Server" =>  "ArvanCloud",
+      "X-Content-Type-Options" =>  "nosniff",
+      "Connection" =>  "keep-alive",
+      "Date" =>  "Wed, 18 Dec 2019 11 => 19 => 50 GMT",
+      "X-Frame-Options" =>  "SAMEORIGIN",
+      "ar-sid" =>  "2081",
+      "Strict-Transport-Security" =>  "max-age=31536000; includeSubDomains",
+      "AR-Request-ID" =>  "c843a9ebb57cbc8f4ce3cb20e8b68022",
+      "Cache-Control" =>  "private, max-age=0",
+      "Vary" =>  "Accept-Encoding",
+      "Content-Type" =>  "text/xml; charset=utf-8"
+    },
+    "statusCode" =>  200
+  }
+}
+```
+
+**سرویس‌ها:**
+
 
 <div class="tab-start">
 </div>
@@ -375,6 +562,84 @@ let getDepositInvoiceData = {
 ## دریافت موجودی سپرده
 با استفاده از این سرویس می توانید آخرین موجودی سپرده خود را دریافت کنید.
 
+
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    DepositNumber     |    string  |   			شماره سپرده	   |   یکی از موارد شماره سپرده یا شبا اجباری است   |       |
+|    Sheba     |    string  |   		شماره شبا	   |   یکی از موارد شماره سپرده یا شبا اجباری است   |        |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+
+**نمونه خروجی:**
+
+```javascript
+[
+  "hasError" => false,
+  "messageId" => 0,
+  "referenceNumber" => "799468105",
+  "errorCode" => 0,
+  "count" => 0,
+  "ott" => "414aebbc9513d2ca",
+  "result" => [
+    "result" => [
+      "IsSuccess" => true,
+      "Message" => "",
+      "Data" => [
+        "DepositNumber" => "1001.000.00000.2",
+        "Amounts" => [
+          [
+            "Amount" => 45965710,
+            "CurrencySwiftCode" => "IRR",
+            "CurrencyISOCode" => 0,
+            "CurrencyName" => "ريال"
+          ]
+        ],
+        "WithdrawableAmounts" => [
+          [
+            "Amount" => 8465710,
+            "CurrencySwiftCode" => "IRR",
+            "CurrencyISOCode" => 0,
+            "CurrencyName" => "ريال"
+          ]
+        ]
+      ],
+      "MessageCode" => 0
+    ],
+    "header" => [
+      "Transfer-Encoding" => "chunked",
+      "Keep-Alive" => "timeout=65",
+      "AR-PoweredBy" => "Arvan Cloud (arvancloud.com)",
+      "AR-ATIME" => "0.793",
+      "Server" => "ArvanCloud",
+      "X-Content-Type-Options" => "nosniff",
+      "Connection" => "keep-alive",
+      "Date" => "Wed, 18 Dec 2019 11 =>37 =>11 GMT",
+      "X-Frame-Options" => "SAMEORIGIN",
+      "ar-sid" => "2081",
+      "Strict-Transport-Security" => "max-age=31536000; includeSubDomains",
+      "AR-Request-ID" => "3232daa198b0008535265b6cbda468df",
+      "Cache-Control" => "private, max-age=0",
+      "Vary" => "Accept-Encoding",
+      "Content-Type" => "text/xml; charset=utf-8"
+    ],
+    "statusCode" => 200
+  ]
+]
+```
+
+**سرویس‌ها:**
+
+
 <div class="tab-start">
 </div>
 
@@ -519,6 +784,71 @@ let getDepositBalanceData = {
 با استفاده از این سرویس می توانید عملیات انتقال وجه داخلی بانک پاسارگاد را انجام دهید.
 
 
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    Amount     |    number  |   	مبلغ			   |      |   *    |
+|    PaymentId     |    string  |     		   |     |       |
+|    SourceDepositNumber     |    string  |     شماره سپرده مبدا		   |  یکی از موارد SourceDepositNumber  یا SourceSheba اجباری است   |       |
+|    SourceSheba     |    string  |     	شماره شبا مبدا		   |   یکی از موارد SourceDepositNumber  یا SourceSheba اجباری است  |       |
+|    DestDepositNumber     |    string  |     	شماره سپرده مقصد		   |   یکی از موارد DestDepositNumber  یا DestSheba اجباری است  |       |
+|    DestSheba     |    string  |     	شماره شبا مقصد 		   |  یکی از موارد DestDepositNumber  یا DestSheba اجباری است   |       |
+|    DestFirstName     |    string  |     نام فرد مقصد		   |     |       |
+|    DestLastName     |    string  |     	نام خانوادگی فرد مقصد	   |     |       |
+|    SourceComment     |    string  |     		شرح مبدا   |     |       |
+|    DestComment     |    string  |     		شرح مقصد   |     |       |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+
+**نمونه خروجی:**
+
+```javascript
+[
+  "hasError" => false,
+  "messageId" => 0,
+  "referenceNumber" => "799481394",
+  "errorCode" => 0,
+  "count" => 0,
+  "ott" => "8da1f90fbb4e23a8",
+  "result" => [
+    "result" => [
+      "IsSuccess" => true,
+      "Message" => null,
+      "Data" => "615593917",
+      "MessageCode" => 0
+    ],
+    "header" => [
+      "Transfer-Encoding" => "chunked",
+      "Keep-Alive" => "timeout=65",
+      "AR-PoweredBy" => "Arvan Cloud (arvancloud.com)",
+      "AR-ATIME" => "1.769",
+      "Server" => "ArvanCloud",
+      "X-Content-Type-Options" => "nosniff",
+      "Connection" => "keep-alive",
+      "Date" => "Wed, 18 Dec 2019 11 =>50 =>38 GMT",
+      "X-Frame-Options" => "SAMEORIGIN",
+      "ar-sid" => "2081",
+      "Strict-Transport-Security" => "max-age=31536000; includeSubDomains",
+      "AR-Request-ID" => "488c0d6219e993ae6178819aa448661c",
+      "Cache-Control" => "private, max-age=0",
+      "Vary" => "Accept-Encoding",
+      "Content-Type" => "text/xml; charset=utf-8"
+    ],
+    "statusCode" => 200
+  ]
+]
+```
+
+**سرویس‌ها:**
 
 <div class="tab-start">
 </div>
@@ -701,6 +1031,73 @@ transferMoneyData = {
 با استفاده از این سرویس می توانید وضعیت انتقال وجه داخلی خود را دریافت کنید.
 
 
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    PaymentId     |    string  |   	   |      |        |
+|    SourceDepositNumber     |    string  |   	شماره سپرده مبدا   |    یکی از موارد SourceDepositNumber  یا SourceSheba اجباری است  |        |
+|    SourceSheba     |    string  |   شماره شبا مبدا	   |   یکی از موارد SourceDepositNumber  یا SourceSheba اجباری است   |        |
+|    DestDepositNumber     |    string  |   	شماره سپرده مقصد	   |    یکی از موارد DestDepositNumber  یا DestSheba اجباری است  |        |
+|    DestSheba     |    string  |   	شماره شبا مقصد 	   |   یکی از موارد DestDepositNumber  یا DestSheba اجباری است   |        |
+|    DestFirstName     |    string  |   	نام فرد مقصد	   |      |        |
+|    DestLastName     |    string  |   	 نام خانوادگی فرد مقصد  |      |        |
+|    SourceComment     |    string  |   شرح مبدا	   |      |        |
+|    DestComment     |    string  |   شرح مقصد	   |      |        |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**نمونه خروجی:**
+
+```javascript
+[
+  "hasError" => false,
+  "messageId" => 0,
+  "referenceNumber" => "799506200",
+  "errorCode" => 0,
+  "count" => 0,
+  "ott" => "533f2507c35293a9",
+  "result" => [
+    "result" => [
+      "IsSuccess" => true,
+      "Message" => "",
+      "Data" => [
+        "RefrenceNumber" => "9809270572455332",
+        "Key" => "registered",
+        "Value" => "ارسالی -  ثبت شده"
+      ],
+      "MessageCode" => 0
+    ],
+    "header" => [
+      "Transfer-Encoding" => "chunked",
+      "Keep-Alive" => "timeout=65",
+      "AR-PoweredBy" => "Arvan Cloud (arvancloud.com)",
+      "AR-ATIME" => "0.749",
+      "Server" => "ArvanCloud",
+      "X-Content-Type-Options" => "nosniff",
+      "Connection" => "keep-alive",
+      "Date" => "Wed, 18 Dec 2019 12 =>16 =>56 GMT",
+      "X-Frame-Options" => "SAMEORIGIN",
+      "ar-sid" => "2081",
+      "Strict-Transport-Security" => "max-age=31536000; includeSubDomains",
+      "AR-Request-ID" => "459d71f8de45f36cde4f0669e197b890",
+      "Cache-Control" => "private, max-age=0",
+      "Vary" => "Accept-Encoding",
+      "Content-Type" => "text/xml; charset=utf-8"
+    ],
+    "statusCode" => 200
+  ]
+]
+```
+
+**سرویس‌ها:**
 
 <div class="tab-start">
 </div>
@@ -843,6 +1240,26 @@ let getTransferStateData = {
 ## پرداخت قبض از طریق سپرده
 
 با استفاده از این سرویس می توانید قبوض خود را از طریق موجودی سپرده خود انجام دهید
+
+
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    DepositNumber     |    string  |   شماره سپرده	   |      |   *     |
+|    BillNumber     |    string  |   شماره قبض	   |      |   *     |
+|    PaymentId     |    string  |   شناسه پرداخت	   |      |   *     |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**سرویس‌ها:**
 
 
 
