--- a/master/چک بانکی.md
+++ b/master/چک بانکی.md
@@ -90,6 +90,44 @@
 
 
 
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    Deposit     |    string  |   	شماره سپرده	   |      |    *    |
+|    RowCount     |    integer  |   	تعداد ردیف	   |      |    *    |
+|    MinAmount     |    number  |   حداقل مبلغ	   |      |    *    |
+|    MaxAmount     |    number  |   حداکثر مبلغ	   |      |        |
+|    StartDate     |    Date  |  تاریخ چک از	   |      |        |
+|    EndDate     |    Date  |  	تاریخ چک تا		   |      |        |
+|    BankCode     |    integer  |  کد بانک		   |      |        |
+|    ChequeStatus     |    integer  |  وضعیت چک	   |      |        |
+|    StartSubmisionDate     |    Date  |   تاریخ واگذاری از	   |      |        |
+|    EndSubmisionDate     |    Date  |  تاریخ واگذاری تا	   |      |        |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**نمونه خروجی:**
+
+``` javascript
+{
+"IsSuccess":true,
+"Message":"عملیات مورد نظر با موفقیت انجام شد.",
+"Data":[],
+"MessageCode":0
+}
+```
+
+**سرویس‌ها:**
+
+
 <div class="tab-start">
 </div>
 
