--- a/master/کارت بانکی.md
+++ b/master/کارت بانکی.md
@@ -24,6 +24,64 @@
 **نکته :** این سرویس پیش نیاز استفاده از سرویس کارت به کارت است
 
 
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    SrcCardNumber     |    string  |   شماره کارت مبدا	   |      |    *    |
+|    DestCardNumber     |    string  |   شماره کارت مقصد	   |      |    *    |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**نمونه خروجی:**
+
+
+```javascript
+[
+  "hasError" => false,
+  "messageId" => 0,
+  "referenceNumber" => "799130009",
+  "errorCode" => 0,
+  "count" => 0,
+  "ott" => "54b0a6a37b0853da",
+  "result" => [
+    "result" => [
+      "IsSuccess" => true,
+      "Message" => "عملیات بازیابی کارت مقصد با موفقیت انجام شد",
+      "Data" => "نام و نام خانوادگی#0000000000",
+      "MessageCode" => 6003
+    ],
+    "header" => [
+      "Transfer-Encoding" => "chunked",
+      "Keep-Alive" => "timeout=65",
+      "AR-PoweredBy" => "Arvan Cloud (arvancloud.com)",
+      "AR-ATIME" => "0.227",
+      "Server" => "ArvanCloud",
+      "X-Content-Type-Options" => "nosniff",
+      "Connection" => "keep-alive",
+      "Date" => "Wed, 18 Dec 2019 06 =>31 =>25 GMT",
+      "X-Frame-Options" => "SAMEORIGIN",
+      "ar-sid" => "2011",
+      "Strict-Transport-Security" => "max-age=31536000; includeSubDomains",
+      "AR-Request-ID" => "73718aabca3c6d53c673bbdbed60cf44",
+      "Cache-Control" => "private, max-age=0",
+      "Vary" => "Accept-Encoding",
+      "Content-Type" => "text/xml; charset=utf-8"
+    ],
+    "statusCode" => 200
+  ]
+]
+```
+
+**سرویس‌ها:**
+
 <div class="tab-start">
 </div>
 
@@ -174,6 +232,44 @@ let getCardInformationData = {
 
 ## کارت به کارت
 با استفاده از این سرویس می توانید عملیات کارت به کارت را در شبکه شتاب انجام دهید.
+
+
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    SrcCardNumber     |    string  |   شماره کارت مبدا	   |      |    *    |
+|    DestCardNumber     |    string  |   شماره کارت مقصد	   |      |    *    |
+|    Password     |    string  |   شماره کارت مقصد	   |      |    *    |
+|    Amount     |    number  |   مقدار	   |      |    *    |
+|    ExpireMonth     |    string  |   ماه تاریخ انقضا		   |      |    *    |
+|    ExpireYear     |    string  |   سال تاریخ انقضا	   |      |    *    |
+|    Cvv2     |    string  |   Cvv2	   |      |    *    |
+|    WithReferenceNumber     |    boolean  |   	   |   در صورتی که true باشد باید فیلد AuthorizationCode را در پارامترها ارسال کنیم واگر false باشد نیازی به پر کردن AuthorizationCode نیست   |    *    |
+|    AuthorizationCode     |    string  |   کد شناسایی در صورتی که مقدار withReferenceNumber برابر true باشد باید در این فیلد ارسال شود و در صورتی که مقدار withReferenceNumber برابر false باشد باید عدد 0 در این پارامتر قرار بگیرد ( مقدار این فیلد هرگز نباید خالی ارسال شود )	   |      |        |
+|    Email     |    string  |  ایمیل	   |      |        |
+|    CardName     |    string  |   نام کارت		   |      |        |
+|    ExtraData.imei	     |    string  |   شماره سریال دستگاه		   |      |        |
+|    ExtraData.OS	     |    string  |   سیستم عامل	   |      |        |
+|    ExtraData.Platform	     |    string  |   پلتفرم		   |   یکی از مقادیر: WEB,ANDROID,IOS,WINDOWS   |        |
+|    ExtraData.IP	     |    string  |  آدرس IP			   |      |        |
+|    ExtraData.UserAgent	     |    string  |   UserAgent در صورتی که Agent کاربر موبایل در دسترس نبود می بایست با مقادیر زیر تکمیل گردد
+OperationName-OperationVersion-Brand-Model		   |      |        |
+|    ExtraData.DeviceId		     |    string  |   	شناسه دستگاه	   |      |        |
+|    OriginalAddress	     |    string  |   آدرس IP درخواست دهنده	   |      |        |
+|    srcComment	     |    string  |   توضیحات مبدا	   |      |        |
+|    DestComment	     |    string  |   توضیحات مقصد	   |      |        |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**سرویس‌ها:**
 
 <div class="tab-start">
 </div>
@@ -387,6 +483,106 @@ let cardToCardData = {
 <div class="tab-end">
 </div>
 
+<br/>
+
+### رمز یکبار مصرف
+این سرویس جهت تولید رمز یکبار مصرف برای مشتری استفاده میگردد.
+
+``` javascript
+HEADER:
+        _token_=[ api_token ] // توکن کسب و کاری *
+        _token_issuer_= 1 // همیشه مقدار 1 ارسال شود *
+        scApiKey= // کلید اتصالی که باید از پنل کسب و کاری خود برای سرویس دریافت کنید *
+        Signature= *
+        ApiKey=*
+
+Method: POST
+Url:
+        [platform-address]/nzh/doServiceCall/
+Parameters:
+       scProductId = 36776 *
+       HarimData = * // مقدار این پارامتر به صورت jsonraw باید ارسال بشود
+
+```
+
+پارامتر **HarimData** میباست به فرمت **Jsonraw** در بدنه درخواست ومقادیری که در زیر توضیح داده میشود به صورت یک رشته ارسال بشود.
+
+
+``` javascript
+{"CardNumber":"","Amount":"","TerminalTypeCode":"","Action":"","CardAcceptorUrl":"","CardAcceptorEmail":"","CardAcceptorTel":""}
+```
+
+
+**CardNumber :** شماره کارتی که میخواهید برای آن رمز دریافت کنید بدون خط تیره
+
+**Amount :** مبلغ مورد نطر جهت تراکنش
+
+**TerminalTypeCode :** بر اساس جدول نوع کد پایانه که در انتهای راهنما وجود دارد
+
+**Action :** بر اساس جدول کد پردازش تراکنش که در انتهای راهنما وجود دارد
+
+**CardAcceptorUrl :**اختیاری
+
+**CardAcceptorEmail :** اختیاری
+
+**CardAcceptorTel :** اختیاری
+
+با استفاده از داده های فوق رشته زیر را ایجاد نمایید. آیتم های موجود در این رشته با علامت # از یکدیگر جدا شده اند.
+
+
+``` javascript
+httpMethod(Upper Case)#url(after Address Root)#ApiKey#bodyJsonParams
+```
+
+
+نمونه رشته بالا:
+
+
+``` javascript
+POST#/Harim/GenerateOtp#apikeyf#{"CardNumber":"","Amount":"","TerminalTypeCode":"","Action":"","CardAcceptorUrl":"https://www.bpi.ir","CardAcceptorEmail":"","CardAcceptorTel":""}
+```
+
+
+ 
+Sign کردن رشته بالا با Private Key مختص به خودتان به روش SHA1 و تبدیل خروجی نهایی به Base64  **(توجه داشته باشید که عبارت بالا به صورت یک رشته کامل و بدون Space باید امضا گردد).**
+
+
+اضافه کردن Apikey و رشته sign شده به Header درخواست با کلیدهای زیر:
+
+ApiKey
+
+Signature
+
+نکتـه مهم : اطلاعات مربوط به ApiKey و کلید خصوصی جهت ساین دیتا را میبایست از بانک دریافت نمایید.
+
+جدول نوع کد پایانه:
+
+| کد |       نوع پایانه                           |
+| --------- | -----------------  |
+|    96     |            خودپرداز              |
+|     99    |               تحویل داری شعبه           |
+|     95    |                تلفن همراه یا پایانه فروش همراه          |
+|     97    |                  تلفن ثابت        |
+|     84    |                   پایانه فروش       |
+|     49    |                   کیوسک یا پایانهی فروش خودکار       |
+|     50    |                   اینترنت یا پایانه فروش اینترنتی       |
+
+جدول کد پردازش تراکنش:
+
+| کد |       شرح                           |
+| --------- | -----------------  |
+|     00    |           خرید کالا و خدمات              |
+|     00    |              دریافت وجه نقد          |
+|     00    |               برگشت از خرید           |
+|     10    |               درخواست مانده حساب           |
+|     11    |               درخواست بررسی           |
+|     13    |                درخواست چکیده          |
+|     30    |                 درخواست انتقال وجه         |
+|     34    |                  انتقال وجه از        |
+|     34    |                  انتقال وجه به        |
+|     00    |                    پرداخت      |
+|     40    |                    درخواست تایید رمز کارت      |
+
 <div class="box-end">
 </div>
 
@@ -394,6 +590,33 @@ let cardToCardData = {
 
 با استفاده از این سرویس می توانید گزارشی از عملیات کارت به کارت هایی که با کارت متصل به اکانت خود، انجام داده اید را مشاهده کنید.
 
+
+**ورودی:**
+
+| نام فیلد |       نوع       |       عنوان                           |توضیحات  | اجباری؟  |
+| --------- | -----------------  |-----------------  |-----------------  |-----------------  |
+|    UserName     |    string  |   نام کاربری	   |   نام کاربری از طریق بانک در اختیار شما قرار می گیرد   |    *    |
+|    SourceCardNumber     |    string  |   شماره کارت مبدا	   |      |    *    |
+|    MinAmount     |    number  |   حداقل مبلغ	   |      |    *    |
+|    MaxAmount     |    number  |   حداکثر مبلغ	   |      |    *    |
+|    StartDate     |    Date  |   تاریخ شروع	   |      |    *    |
+|    EndDate     |    Date  |  تاریخ پایان		   |      |    *    |
+|    SourceDepositNumber     |    string  |  شماره سپرده مبدا	   |      |        |
+|    DestinationCardNumber     |    string  |   شماره سپرده مقصد	   |      |        |
+|    SequenceNumber     |    string  |   عنوان کارت	   |      |        |
+|    ReferenceNumber     |    string  |  شماره پیگیری	   |      |        |
+|    SourceNote     |    string  |   توضیحات مبدا	   |      |        |
+|    DestinationNote     |    string  |   توضیحات مقصد	   |      |        |
+|    privateKey     |    string  |   کلید خصوصی   |    در صورتی که این فیلد فرستاده شود مقدار کلید خصوصی داده شده، تنها در درخواست فعلی   جایگزین کلید داده شده در سازنده خواهد شد. <br/>رشته pem کلید خصوصی و یا مسیر فایل pem کلید خصوصی را در این پارامتر میتوان ارسال   کرد   |        |
+|     scVoucherHash    |        Array<string>                 |  کدهای تخفیف	                     |                       |        |
+|     scApiKey    |               string         |              API KEY سرویس کال	         |                       |    *    |
+|     token    |                  string        |             	توکن احراز هویت          |           در صورتی که این فیلد داده شده باشد مقدار توکن داده شده، تنها در درخواست فعلی، جایگزین توکن داده شده در سازنده خواهد شد           |        |
+
+**خروجی:**
+
+آرایه
+
+**سرویس‌ها:**
 
 <div class="tab-start">
 </div>
